vlib/v/checker/tests/if_expr_with_none_only.out
vlib/v/checker/tests/if_expr_with_none_only.vv:2:2: warning: unused variable: `a`
    1 | fn main() {
    2 |     a := if true { none } else { none }
      |     ^
    3 | }
vlib/v/checker/tests/if_expr_with_none_only.vv:2:7: error: invalid if expression with no value type supplied beyond `none`
    1 | fn main() {
    2 |     a := if true { none } else { none }
      |          ~~
    3 | }
